<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndWake</string>
    <string name="appwidget_loading">Loading&#8230;</string>
    <string name="appwidget_computer_name">AndWake Computer</string>
    <string name="appwidget_computer_dialog_config_title">Select Computer</string>
    <string name="appwidget_computer_wake">Wake</string>
    <string name="appwidget_group_name">AndWake Group</string>
    <string name="appwidget_group_dialog_config_title">Select Group</string>
    <string name="appwidget_group_wake">Wake All</string>
    <string name="appwidget_computer_port_separator">:</string>
    <string name="appwidget_computer_mac">FF:FF:FF:FF:FF:FF</string>
    <string name="appwidget_computer_address">192.168.0.255</string>
    <string name="appwidget_computer_port">9</string>
    <string name="menu_add_group">New Group</string>
    <string name="menu_add_computer">New Computer</string>
    <string name="fragment_favorites_title">Favorites</string>
    <string name="fragment_groups_title">Groups</string>
    <string name="fragment_computers_title">Computers</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_computer_title_add">New Computer</string>
    <string name="dialog_computer_title_edit">Edit Computer</string>
    <string name="dialog_computer_name">Name :</string>
    <string name="dialog_computer_name_hint">MyComputer</string>
    <string name="dialog_computer_mac">Mac Address :</string>
    <string name="dialog_computer_mac_hint">FF</string>
    <string name="dialog_computer_address">Network Address :</string>
    <string name="dialog_computer_address_hint">192.168.0.255</string>
    <string name="dialog_computer_port">Port :</string>
    <string name="dialog_computer_port_defaut">9</string>
    <string name="dialog_computer_port_hint">9</string>
    <string name="dialog_computer_error_name_empty">Name could not be empty</string>
    <string name="dialog_computer_error_mac_hex">Invalid mac address</string>
    <string name="dialog_computer_error_address_empty">Network address could not be empty</string>
    <string name="dialog_computer_error_port_empty">Port could not be empty</string>
    <string name="dialog_group_title_add">New Group</string>
    <string name="dialog_group_title_edit">Edit Group</string>
    <string name="dialog_group_name">Name :</string>
    <string name="dialog_group_name_hint">MyGroup</string>
    <string name="dialog_group_computers">Computers :</string>
    <string name="dialog_group_error_name_empty">Name could not be empty</string>
    <string name="dialog_delete_computer_title">Delete Computer</string>
    <string name="dialog_delete_computer_text">Are you sure you want to delete this computer ?</string>
    <string name="dialog_delete_group_title">Delete Group</string>
    <string name="dialog_delete_group_text">Are you sure you want to delete this group ?</string>
    <string name="list_element_computer_wake">Wake</string>
    <string name="list_element_computer_port_separator">:</string>
    <string name="list_element_computer_favorite">Favorite</string>
    <string name="list_element_group_wake">Wake All</string>
    <string name="list_element_group_favorite">Favorite</string>
    <string name="list_header_name">Header</string>
    <string name="list_header_computer_name">Favorites Computers</string>
    <string name="list_header_group_name">Favorites Groups</string>
    <string name="toast_wake_init">Sending wake packet&#8230;</string>
    <string name="toast_wake_done">Wake packet sent.</string>
    <string name="toast_wake_error">An error has occurred, the packet has not been sent.</string>
    <string name="toast_wake_group_init">Sending wake packets&#8230;</string>
    <string name="toast_wake_group_done">All wake packets sent.</string>
    <string name="toast_wake_group_error">An error has occurred, some packets have not been sent.</string>
    <string name="toast_wake_group_empty_error">Empty group, no packet have been sent.</string>

</resources>
