<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/list_element_computers_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:contentDescription="@string/list_element_computer_favorite"
        style="?android:attr/starStyle" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="100"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/list_element_computer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_computer_name_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/list_element_computer_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_computer_mac_hint"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/list_element_computer_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_computer_address_hint"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/list_element_computer_port_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_element_computer_port_separator"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/list_element_computer_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_computer_port_hint"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/list_element_computers_wake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/list_element_computer_wake" />

</LinearLayout>