<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" xmlns:tools="http://schemas.android.com/tools">

	<CheckBox
	    android:id="@+id/list_element_group_favorite"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:contentDescription="@string/list_element_group_favorite"
	    style="?android:attr/starStyle" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="100"
        android:orientation="vertical" >
        
       <TextView
           android:id="@+id/list_element_group_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dialog_group_name_hint"
           android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/list_element_group_computers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/list_element_group_wake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ellipsize="none"
        android:singleLine="true"
        android:text="@string/list_element_group_wake" />

</LinearLayout>
